0030764: Coding - warnings in Image_AlienPixMap.cxx when built with MSVC10

Disable warnings when including system headers (conflict between VS 2010 and Windows SDK definitions).